@@ -18,6 +18,7 @@ module Quoter
     unsigned long current;
     string symbol; // @key
   };
+  typedef sequence<Stock_Info> Stock_Info_Seq;
 };
 
 #endif
