@@ -28,31 +28,29 @@ module CCM_DDS
     void write (in Quoter::Stock_Info an_instance)
       raises (InternalError);
   };
-  
+
   // @from Reader<T> from DDS_RawListen for Quoter::Stock_Info
   interface Stock_Info_Reader
   {
-    typedef sequence<Quoter::Stock_Info> Stock_InfoSeq;
-    
-    void read_all (out Stock_InfoSeq instances, out ReadInfoSeq infos)
+    void read_all (out Quoter::Stock_Info_Seq instances, out ReadInfoSeq infos)
       raises (InternalError);
-    
-    void read_all_history (out Stock_InfoSeq instances, out ReadInfoSeq infos)
+
+    void read_all_history (out Quoter::Stock_Info_Seq instances, out ReadInfoSeq infos)
       raises (InternalError);
-    
+
     void read_one (inout Quoter::Stock_Info an_instance, out ReadInfo info)
       raises (NonExistent,
               InternalError);
-    
+
     void read_one_history (in Quoter::Stock_Info an_instance,
-                           out Stock_InfoSeq instances, out ReadInfoSeq infos)
+                           out Quoter::Stock_Info_Seq instances, out ReadInfoSeq infos)
       raises (NonExistent,
               InternalError);
-    
+
     attribute QueryFilter filter
       setraises (BadParameter);
   };
-  
+
   // @from RawListener for Quoter::Stock_Info
   interface Stock_Info_RawListener
   {
@@ -67,16 +65,16 @@ module Quoter
     // @from DDS_TopicBase
     attribute string topic_name;
     attribute DDS::StringSeq key_fields;
-    
+
     // @from DDS_TopicBase : DDS_Base
     uses CCM_DDS::ConnectorStatusListener error_listener;
     attribute DDS::DomainId_t domain_id;
     attribute string qos_profile;
-    
+
     // @from DDS_Write for Stock_Info
     provides CCM_DDS::Stock_Info_Writer info_in_data;
     provides DDS::DataWriter info_in_dds_entity;
-    
+
     // @from DDS_RawListen for Stock_Info
     provides CCM_DDS::Stock_Info_Reader info_out_data;
     provides CCM_DDS::ListenerControl info_out_control;
